--- a/Inscription/inscription étudiant.html
+++ b/Inscription/inscription étudiant.html
@@ -3,7 +3,7 @@
 
 <head>
 <meta charset="utf-8">
-<title>Université ESSF Godomey</title>
+<title>CPET "La Richesse Du Savoir"</title>
 <!-- Stylesheets -->
 <link href="css/bootstrap.css" rel="stylesheet">
 <link href="css/style étudiant.css" rel="stylesheet">
